--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,8 @@ dev_dependencies:
   build_runner: ^2.11.0
   drift_dev: ^2.31.0
   test: ^1.26.3
+  mocktail: ^1.0.0
+  bloc_test: ^10.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
